# android-daw

./: .gitignore  .gitmodules  BUILD_FIX_NOTES.md  README.md  build.gradle  gradle.properties  gradlew
.github/workflows/: build-apk.yml  build-daw-apk.yml  build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/daw/: DigitalAudioWorkstation.kt  MainActivity.java  MainActivity.kt
app/src/main/java/com/example/daw/ui/: RackCard.kt
app/src/main/kotlin/com/example/daw/: DigitalAudioWorkstation.kt  MainActivity.kt
app/src/main/kotlin/com/example/daw/ui/: PianoRoll.kt  RackCard.kt  Theme.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml
